--- a/TechCareer/AndroidJava/KisilerUygulamasi/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/TechCareer/AndroidJava/KisilerUygulamasi/app/src/main/res/layout/fragment_anasayfa.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.AnasayfaFragment" >
+    tools:context=".fragment.AnasayfaFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarAnasayfa"
@@ -24,8 +24,18 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        app:tint="@color/white"
         android:src="@drawable/ekle_resim"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarAnasayfa" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
